--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <header>
+        <nav>
+          <p>Move to my other project solutions</p>
+          <ul>
+            <li><a href="./css basis solution/google/index.html">Google</a></li>
+          </ul>
+        </nav>
         <h1>This is your first HTML page!</h1>
     </header>
 
