added link to part one solution

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <p>Move to my other project solutions</p>
           <ul>
             <li><a href="./css basis solution/google/index.html">Google</a></li>
+            <li><a href="./intermediate-html-part2.html">Intermediate html part 2 - solution</a></li>
           </ul>
         </nav>
         <h1>This is your first HTML page!</h1>
